--- a/sass/i18n_viz.css.sass
+++ b/sass/i18n_viz.css.sass
@@ -11,6 +11,7 @@
   background-color: #F5F5F5
   +background-image(linear-gradient(#FFFFFF, #F5F5F5))
   padding: 10px
+  z-index: 999
   a, span
     margin-right: 10px
     &:last-child
